--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
     
     <header>
         <nav>
-            <a href="home.html">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
+            <a href="/Samia003762.github.io/home.html">Home</a>
+            <a href="/Samia003762.github.io/about.html">About Me</a>
+            <a href="/Samia003762.github.io/projects.html">Projects</a>
+            <a href="/Samia003762.github.io/resume.html">Resume</a>
+            <a href="/Samia003762.github.io/contact.html">Contact</a>
         </nav>
     </header>
 
