--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <a href="/Samia003762.github.io/home.html">Home</a>
+                <a href="/Samia003762.github.io/index.html">Home</a>
                 <a href="/Samia003762.github.io/about.html">About Me</a>
                 <a href="/Samia003762.github.io/projects.html">Projects</a>
                 <a href="/Samia003762.github.io/resume.html">Resume</a>
