--- a/projects.html
+++ b/projects.html
@@ -27,19 +27,25 @@
         <section class="project">
             <h2>Personality Quiz</h2>
             <p>This is a fun quiz that determines your personality type based on your answers to 10 questions. It was built using Python and Tkinter.</p>
-            <a href="" target="_blank">Try the Quiz</a>
+            <a href="https://github.com/Samia003762/Personality-Quiz-" target="_blank">Try the Quiz</a>
         </section>
 
         <section class="project">
             <h2>Noughts and Crosses</h2>
             <p>My first programming project after only practicing on small problems to build my skills.</p>
-            <a href="" target="_blank">View on GitHub</a>
+            <a href="https://github.com/Samia003762/Noughts-and-Crosses" target="_blank">View on GitHub</a>
         </section>
         
         <section class="project">
-            <h2>This Website!</h2>
+            <h2>Banking Application</h2>
+            <p>I made this program to practice my OOP and also widen my project portfolio.</p>
+            <a href="https://github.com/Samia003762/bankingapplication" target="_blank">View on GitHub</a>
+        </section>
+
+        <section class="project">
+            <h2>This Website</h2>
             <p>I decided to create this website to showcase my coding abilities but also give a platform for others to get to know me.</p>
-            <a href="" target="_blank">View on GitHub</a>
+            <a href="https://github.com/Samia003762/Noughts-and-Crosses" target="_blank">View on GitHub</a>
         </section>
 
     </main>
