--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
         
         <section class="contact-form">
-            <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+            <form action="mailto:hsamia925@gmail.com" method="post" enctype="text/plain">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
@@ -50,10 +50,10 @@
         <section class="contact-details">
             <h2>Contact Information</h2>
             <ul>
-                <li>Email: <a href="mailto:your-email@example.com">hsamia925@gmail.com</a></li>
+                <li>Email: <a href="mailto:hsamia925@gmail.com">hsamia925@gmail.com</a></li>
                 <li>Phone: +44 7780 360197</li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/samia-hadi-157184279/">LinkedIn Profile</a></li>
-                <!--<li>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></li>-->
+                <!--<li>GitHub: <a href="https://github.com/Samia003762">github.com/Samia003762</a></li>-->
                 
             </ul>
         </section>
