--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me - Your Name</title>
+    <title>Contact Me - Samia Hadi</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
