--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="projects.html">Projects</a>
+            <a href="/Samia003762.github.io/index.html">Home</a>
+            <a href="/Samia003762.github.io/about.html">About Me</a>
+            <a href="/Samia003762.github.io/projects.html">Projects</a>
             <a href="/Samia003762.github.io/resume.html">Resume</a>
             <a href="/Samia003762.github.io/contact.html">Contact</a>
         </nav>
