--- a/projects.html
+++ b/projects.html
@@ -10,13 +10,11 @@
     
     <header>
         <nav>
-            <ul>
-                <a href="/Samia003762.github.io/index.html">Home</a>
-                <a href="/Samia003762.github.io/about.html">About Me</a>
-                <a href="/Samia003762.github.io/projects.html">Projects</a>
-                <a href="/Samia003762.github.io/resume.html">Resume</a>
-                <a href="/Samia003762.github.io/contact.html">Contact</a>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="projects.html">Projects</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <h1>My Projects</h1>
     </header>
