--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h3>Microsoft Excel</h3>
                     <p>Issued by: Microsoft</p>
                     <p>Date: Expecting to be finished by October 2024</p>
-                    <a href="" target="_blank">View Certificate Soon</a>
+                    <a href="https://www.coursera.org/account/accomplishments/certificate/FOLFR623A91Y" target="_blank">View Certificate</a>
                 </div>
                 
                 <div class="certification-item">
