--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="certification-item">
                     <h3>Business Analysis MOOC</h3>
                     <p>Issued by: Code First Girls</p>
-                    <p>Date: Expected to be finshed by the end of September 2024</p>
+                    <p>Date: Expected to be finshed by Octobe 2024</p>
                     <a href="https://link-to-certification.com" target="_blank">View Certificate Soon</a>
                 </div>
     
@@ -64,7 +64,7 @@
                 <div class="certification-item">
                     <h3>Microsoft Excel</h3>
                     <p>Issued by: Microsoft</p>
-                    <p>Date: Expecting to be finished by October 2024</p>
+                    <p>Date: October 2024</p>
                     <a href="https://www.coursera.org/account/accomplishments/certificate/FOLFR623A91Y" target="_blank">View Certificate</a>
                 </div>
                 
