--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
     <h1>My CV</h1>
 
     <div class="cv-container">
-        <iframe src="https://thecompton-my.sharepoint.com/personal/003762_thecompton_org_uk/_layouts/15/Doc.aspx?sourcedoc={53241eb3-01d7-4771-9543-0c1a7cf6ed60}&amp;action=embedview" width="800px" height="700px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> document, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+        <iframe src="https://thecompton-my.sharepoint.com/personal/003762_thecompton_org_uk/_layouts/15/Doc.aspx?sourcedoc={53241eb3-01d7-4771-9543-0c1a7cf6ed60}&amp;action=embedview" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> document, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
         
     </div>
 
