--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="certification-item">
                     <h3>Business Analysis MOOC</h3>
                     <p>Issued by: Code First Girls</p>
-                    <p>Date: Expected to be finshed by Octobe 2024</p>
-                    <a href="https://link-to-certification.com" target="_blank">View Certificate Soon</a>
+                    <p>Date:October 2024</p>
+                    <a href="https://mail.google.com/mail/u/0/#inbox/FMfcgzQXJZvgTbvdPZSSJGBSWBVhlPsw?projector=1&messagePartId=0.1" target="_blank">View Certificate</a>
                 </div>
     
                 <div class="certification-item">
