--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <section class="project">
             <h2>Personality Quiz</h2>
             <p>This is a fun quiz that determines your personality type based on your answers to 10 questions. It was built using Python and Tkinter.</p>
-            <a href="https://github.com/Samia003762/Personality-Quiz-" target="_blank">Try the Quiz</a>
+            <a href="https://github.com/Samia003762/Personality-Quiz-" target="_blank">View on GitHub</a>
         </section>
 
         <section class="project">
